2008-01-04  Hans Breuer  <hans@breuer.org>

	* app/display/gimpdisplayshell-selection.c :
	marching ants with G_PRIORITY_DEFAULT_IDLE, fixes bug #479875

2008-01-04  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/tools/gimprotatetool.c (rotate_angle_changed): also update
	trans_info[REAL_ANGLE]. Fixes bug #507167.

2007-12-30  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/script-fu/scripts/chip-away.scm: applied another patch
	from Ulf-D. Ehlert for the parameter range (bug #506110).

2007-12-28  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/script-fu/scripts/chip-away.scm: applied patch from
	Ulf-D. Ehlert that fixes the range of the "Chip amount" parameter
	(bug #506110).

2007-12-22  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* app/core/gimpimage-sample-points.c
	(gimp_image_add_sample_point_at_pos): corrected undo description.

2007-12-22  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* data/palettes/Tango.gpl: removed duplicate entry ("Untitled").

2007-12-21  Sven Neumann  <sven@gimp.org>

	* app/paint/gimpink.c: reverted last change.

2007-12-21  Sven Neumann  <sven@gimp.org>

	* app/paint/gimpink.c (gimp_ink_motion): applied patch from Alexia
	Death that fixes Ink tool speed calculation when using a tablet
	(bug #504711).

2007-12-19  Kevin Cozens  <kcozens@cvs.gnome.org>

	Merged from trunk:

	* plug-ins/script-fu/tinyscheme/scheme.c: Added extra checks to stop
	bad syntax in LET*, LET, and LETREC from causing a segmentation fault
	in Linux. See SourceForge bug #1817986.

2007-12-18  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* plug-ins/common/psd-load.c: applied patch from John Marshall
	that fixes handling of PSD files with blank layer names (bug #504149).

2007-12-18  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Merged from trunk:

	* libgimpwidgets/gimpstock.h:  fix typo.

2007-12-16  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.4.4 (interface age 4).
